Converted to SonarJ 5.0.2 and cleaned up violations
git-svn-id: https://svn.codehaus.org/sonar-plugins/trunk@837 d25a0af3-c461-0410-a42d-853a01480fe4